--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,2 @@
-HF_ACCESS_TOKEN=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
+VITE_VAPI_PUBLIC_KEY="f74a2093-261c-4367-af56-f9a02a207553"
+VITE_VAPI_ASSISTANT_ID="95f020dc-66c7-42c2-9f86-a6b7cfb67f28"
