--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": serve -s dist
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
